tests/ui/generics/enum-definition-with-enclosing-generic-5997-.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/enum-definition-with-enclosing-generic-5997-.rs:3:14
   |
LL | fn f<T>() -> bool {
   |      - type parameter from outer item
LL |     struct S(T);
   |             -^ use of generic parameter from outer item
   |             |
   |             help: try introducing a local generic parameter here: `<T>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0401`.
